--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i": "^0.3.6",
     "npm": "^6.4.1",
     "vue": "^2.5.17",
+    "vue-chat-scroll": "^1.3.3",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1"
